# doc-translator

./: .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
backend/scripts/: create_config_tables.py  create_users_table.py
backend/src/: __init__.py
backend/src/cli/: __init__.py  __main__.py  commands.py
backend/src/core/: __init__.py  app_config.py
backend/src/graphql/: __init__.py  config_resolvers.py  decorators.py  resolvers.py  schema.py  thesaurus_resolvers.py  user_resolvers.py
backend/src/models/: __init__.py  config.py  job.py  thesaurus.py  user.py
backend/src/services/: __init__.py  auth_service.py  concurrent_executor.py  document_processor.py  excel_document_processor.py  excel_processor.py  global_config_service.py  job_manager.py  language_pair_service.py  markdown_processor.py  pdf_processor.py  powerpoint_processor.py  text_processor.py  thesaurus_service.py  translation_orchestrator.py  translation_service.py  (+3 more)
backend/tests/: test_app_config.py  test_asgi_application.py  test_auth_service.py  test_auto_append_properties.py  test_concurrent_executor.py  test_config_model.py  test_config_resolvers.py  test_document_processor.py  test_download_endpoint.py  test_download_presigned.py  test_excel_processor.py  test_excel_processor_integration.py  test_filename_sanitization.py  test_global_config_service.py  test_graphql_resolvers.py  test_graphql_schema.py  test_interleaved_mode_properties.py  test_job_creation_s3.py  test_job_manager.py  test_job_repository.py  test_job_store_dynamodb.py  test_language_pair_service.py  test_markdown_processor.py  test_orchestrator_s3.py  test_pdf_processor.py  test_powerpoint_processor.py  test_s3_config_required.py  test_s3_error_handling.py  test_s3_file_storage.py  test_setup.py  test_text_processor.py  test_thesaurus_admin_permissions_properties.py  test_translation_integration.py  test_translation_orchestrator.py  test_translation_service.py  test_upload_uses_s3.py  test_user_model.py  test_user_model_selection.py  test_user_resolvers.py  test_user_service.py  (+2 more)
e2e-tests/: .gitignore  Makefile  README.md  e2e_chrome_runner.py  e2e_config.json  pyproject.toml  pytest.ini  run_e2e_tests.py  test_cross_platform.py  test_e2e_chrome_devtools.py
(+81 files in other folders)
