[project]
name = "e2e-tests"
version = "0.1.0"
description = "E2E tests for Doc Translation System"
requires-python = ">=3.12"
dependencies = [
    # Core testing framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-html>=3.2.0",
    "pytest-xdist>=3.3.0",
    # HTTP requests and API testing
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    # Document file manipulation for test data
    "openpyxl>=3.1.0",
    # JSON and data handling
    "jsonschema>=4.19.0",
    # Test reporting and utilities
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    # Development and debugging
    "pytest-sugar>=0.9.7",
    "pytest-clarity>=1.0.1",
]

[project.optional-dependencies]
browser = [
    # Browser automation utilities (fallback if MCP not available)
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests requiring running services",
    "api: API-only tests (no browser)",
    "browser: Browser automation tests",
    "slow: Slow running tests",
]
